--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Redirecting...</title>
+    <title>Jump to a random Auntie Shanty song!</title>
     <script>
       // Generate a random number
 const randomNumber = Math.floor(Math.random() * 114); // Replace 1000 with your desired range
